# flexiv_rdk

./: .gitignore  CMakeLists.txt  LICENSE  README.md  llms.txt
.github/workflows/: ci-cpp.yml  ci-python.yml
.github/workflows/shared_cpp_steps/: action.yml
.github/workflows/shared_python_steps/: action.yml
cmake/: flexiv_rdk-config.cmake.in  qnx_toolchain.cmake  qnx_toolchain_aarch64le.cmake  qnx_toolchain_x86_64.cmake
doc/: Doxyfile.in
example/: CMakeLists.txt  basics1_display_robot_states.cpp  basics2_clear_fault.cpp  basics3_primitive_execution.cpp  basics4_plan_execution.cpp  basics5_zero_force_torque_sensors.cpp  basics6_gripper_control.cpp  basics7_update_robot_tool.cpp  basics8_global_variables.cpp  basics9_logging_behavior.cpp  basics9_move_in_TCP_frame.cpp  intermediate1_realtime_joint_position_control.cpp  intermediate2_realtime_joint_impedance_control.cpp  intermediate3_realtime_joint_torque_control.cpp  intermediate4_realtime_joint_floating.cpp  intermediate5_realtime_cartesian_pure_motion_control.cpp  intermediate6_realtime_cartesian_motion_force_control.cpp  intermediate7_robot_dynamics.cpp
example_py/: AGENT_REFERENCE_primitives_only.py  basics1_display_robot_states.py  basics2_clear_fault.py  basics3_primitive_execution.py  basics4_plan_execution.py  basics5_zero_force_torque_sensors.py  basics6_gripper_control.py  basics7_update_robot_tool.py  basics8_global_variables.py  intermediate1_non_realtime_joint_position_control.py  intermediate2_non_realtime_joint_impedance_control.py  intermediate3_non_realtime_cartesian_pure_motion_control.py  intermediate4_non_realtime_cartesian_motion_force_control.py  intermediate5_robot_dynamics.py  utility.py
include/flexiv/: Utility.hpp
include/flexiv/rdk/: data.hpp  device.hpp  file_io.hpp  gripper.hpp  maintenance.hpp  mode.hpp  model.hpp  robot.hpp  safety.hpp  scheduler.hpp  tool.hpp  utility.hpp  work_coord.hpp
lib/: flexiv_rdk.win_amd64.lib.sha256  libflexiv_rdk.aarch64-linux-gnu.a.sha256  libflexiv_rdk.arm64-darwin.a.sha256  libflexiv_rdk.x86_64-linux-gnu.a.sha256
resources/: flexiv_rizon4mr_kinematics.urdf
test/: CMakeLists.txt  test_dynamics_engine.cpp  test_endurance.cpp  test_loop_latency.cpp  test_repeated_instantiation.cpp  test_robot_constructor.cpp  test_robot_constructor.py  test_timeliness_monitor.cpp
